# redshow

./: .gitignore  CMakeLists.txt  Makefile  Makefile.config  Makefile.static  README.md  common_lib.cpp  common_lib.h  main.cpp  redshow.cpp  redshow.h
docs/: Doxyfile
docs/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classredshow_1_1hash_1_1_s_h_a256-members.html  classredshow_1_1hash_1_1_s_h_a256.html  classredshow_1_1instruction_1_1_instruction_graph-members.html  classredshow_1_1instruction_1_1_instruction_graph.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  hash_8cpp.html  hash_8cpp_source.html  hash_8h.html  hash_8h_source.html  index.html  instruction_8cpp.html  instruction_8cpp_source.html  instruction_8h.html  instruction_8h_source.html  md__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaceredshow.html  namespaceredshow_1_1hash.html  namespaceredshow_1_1instruction.html  namespaceredshow_1_1redundancy.html  (+53 more)
docs/latex/: annotated.tex  classredshow_1_1hash_1_1_s_h_a256.tex  classredshow_1_1instruction_1_1_instruction_graph.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  (+38 more)
include/: common_lib.h  cxxopts.hpp  hash.h  instruction.h  instruction_stat.h  redshow.h  redshow_dummy.h  redshow_graphviz.h  redundancy.h  utils.h  value_flow.h
src/: common_lib.cpp  hash.cpp  instruction.cpp  instruction_stat.cpp  redshow.cpp  redshow_dummy.cpp  redshow_parser.cpp  redundancy.cpp  utils.cpp  value_flow.cpp
(+148 files in other folders)
